--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello Worl
+<html>
+  <style>
+  	body{
+	 background-color: #0000FF;
+   padding: 0px;
+   margin: 0px;
+ }
+
+#gradient
+{
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
+}
+  </style>
+    <head>
+    <link rel="shortcut icon" href="images/myicon.ico">
+    <link rel="icon" type="image/gif" href="animated_myicon1.gif">
+
+    <script type="text/javascript" src="jj.js"></script>
+  </head>
+  <body>
+    <div id="gradient" />
+ </body>
+</html>
