--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <head>
     <link rel="shortcut icon" href="images/myicon.ico">
     <link rel="icon" type="image/gif" href="animated_myicon1.gif">
-
+    <title>Anuraag's Profile</title>
     <script type="text/javascript" src="jj.js"></script>
   </head>
   <body>
