--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <html>
     <head>
+    <!-- Stting title icon and text -->
     <link rel="shortcut icon" href="images/myicon.ico">
     <title>Anuraag's Profile</title>
-     <link rel = "stylesheet" type = "text/css" href = "style1.css" />
+
+      <!-- Linking the style sheet -->
+     <link rel = "stylesheet" type = "text/css" href = "css/style1.css" />
   </head>
   <body>
 
+    <!-- div for snackbar -->
     <div id="snackbar">Welcome. Hope you are having a great day!</div>
-    <script>
-      setTimeout(myFunction(), 7000)
-      function myFunction() {
-      var x = document.getElementById("snackbar")
-      x.className = "show";
-      setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
-}
-</script>
- </body>
+    <script type="text/javascript" src="js/sbar.js"></script>
+  </body>
 </html>
