Added code for title

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
     <head>
     <!-- Stting title icon and text -->
     <link rel="shortcut icon" href="images/myicon.ico">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
     <title>Anuraag's Profile</title>
 
       <!-- Linking the style sheet -->
      <link rel = "stylesheet" type = "text/css" href = "css/style1.css" />
+
+     <style>
+.w3-allerta {
+  font-family: "Allerta Stencil", Sans-serif;
+}
+</style>
   </head>
   <body>
 
-  <div id="name"><h1><center>ANURAAG MOTIWALE</h1></div>
+ 
+
+  <div class="w3-container w3-black w3-center w3-allerta">
+  <h1><p class="w3-xlarge">ANURAAG MOTIWALE</p></h1>
+
+</div>
     <!-- div for snackbar -->
     <div id="snackbar">Welcome. Hope you are having a great day!</div>
     <script type="text/javascript" src="js/sbar.js"></script>
