made some changes to ui

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
 <section class = "content" id = "name">
-<div style="color:white;height: 110px;background-color:black">
+<div style="color:white;background-color:black">
 
 <h1><center>ANURAAG MOTIWALE</center></h1>
 
 <center>
-<a target="_blank" title="Follow me on Github" href="http://www.github.com/asmotiwale"><img alt="Follow me on Github" src="images/git_icon.png" border=0 hspace = "20"></a>
+<a target="_blank" title="Follow me on Github" href="http://www.github.com/asmotiwale"><img alt="Follow me on Github" src="images/git_icon.png" border=0 hspace = "20" vspace = "10"></a>
 
 <a target="_blank" title="Follow me on LinkedIn" href="https://www.linkedin.com/in/anuraag-motiwale-229bb79b/"><img alt="Follow me on LinkedIn" src="images/lin_icon.png" border=0></a>
 </center>
