Made changes to profile page

--- a/index.html
+++ b/index.html
@@ -1,47 +1,86 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="images/myicon.ico">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel = "stylesheet" type = "text/css" href = "css/style1.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="images/myicon.ico">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel = "stylesheet" type = "text/css" href = "css/style1.css" />
 
-  <title>Anuraag's Profile</title>
+    <title>Anuraag's Profile</title>
 </head>
 
 <body>
-<section class = "content" id = "name">
-<div style="color:white;background-color:black">
+    <section class = "content" id = "name">
+        <div style="color:white;background-color:black">
+            <h1><center>ANURAAG MOTIWALE</center></h1>
+            <center>
+                <a target="_blank" title="Follow my code on Github" href="http://www.github.com/asmotiwale"><img alt="Follow my code on Github" src="images/git_icon.png" border=0 hspace = "20" vspace = "10"></a>
+                <a target="_blank" title="Connect with me on LinkedIn" href="https://www.linkedin.com/in/anuraag-motiwale-229bb79b/"><img alt="Connect with me on LinkedIn" src="images/lin_icon.png" border=0></a>
+            </center>
+        </div>
+    </section>
 
-<h1><center>ANURAAG MOTIWALE</center></h1>
+    <div style="background-color: black"><center>
+        <div class="container">
+            <div id = "tabs" style="background-color: black">
+                  <ul class="nav nav-tabs">
+                      <li class="nav-item">
+                          <a href="#about_me" class="nav-link active" role = "tab" data-toggle="tab" style="color:grey">About Me</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="#projects" class="nav-link" role = "tab" data-toggle="tab" style="color:grey">Projects</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="#interests" class="nav-link" role = "tab" data-toggle="tab" style="color:grey">Interests</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="#contact" class="nav-link" role = "tab" data-toggle="tab" style="color:grey">Contact Me</a>
+                      </li>
+                  </ul>
+            </div>
+        </div></center>
+    </div>
 
-<center>
-<a target="_blank" title="Follow me on Github" href="http://www.github.com/asmotiwale"><img alt="Follow me on Github" src="images/git_icon.png" border=0 hspace = "20" vspace = "10"></a>
+    <div class="tab-content">
 
-<a target="_blank" title="Follow me on LinkedIn" href="https://www.linkedin.com/in/anuraag-motiwale-229bb79b/"><img alt="Follow me on LinkedIn" src="images/lin_icon.png" border=0></a>
-</center>
-</div>
-</section>
+        <div role="tabpanel" class="tab-pane active" id="about_me">
+            <div class="container">
+                <div class = "row">
+                    <div class = "col-4">
+                        <br></br><br></br>
+                            <img src="images/profile.jpg" class = "rounded-circle float-left" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
+                            <div id = "info" style="font-size:30px">
+                                <center><bold>Anuraag Motiwale</bold>
+                            </div>
+                            <div id = "social">
+                              <center>
+                                <a target="_blank" title="Follow me on Google+" href="https://plus.google.com/112507411061159008531"><img alt="Follow me on Google+" src="images/gplus_icon.png" border=0 hspace = "20" vspace = "10" style="height:40px;width:40px"></a>
+                                <a target="_blank" title="Follow me on Facebook" href="https://www.facebook.com/asmotiwale"><img alt="Follow me on Facebook" src="images/fb_icon.png" border=0 hspace = "20" vspace = "10"></a>
+                                <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "20" vspace = "10" style="height:36px;width:36px"></a>
+                              </center>
+                            </div>
 
-<nav class="navbar navbar-inverse bg-inverse navbar-toggleable-sm">
-  <div class="container">
-    <div class="navbar-nav mr-auto">
-      <a class="nav-item nav-link active" href="#">About Myself</a>
-      <a class="nav-item nav-link" href="#">Education</a>
-      <a class="nav-item nav-link" href="#">Projects</a>
-      <a class="nav-item nav-link" href="#">Contact Me</a>
-    </div><!-- navbar-nav -->
+                    </div>
+                    <div class = "col-8">
+                      <br></br>
+                      <center>Education</center>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-  </div><!-- container -->
-</nav>
+        <div role="tabpanel" class="tab-pane fade" id="projects">3</div>
+        <div role="tabpanel" class="tab-pane fade" id="interests">4</div>
+        <div role="tabpanel" class="tab-pane fade" id="contact">5</div>
+    </div>
 
-<script src="js/jquery.slim.min.js"></script>
-<script src="js/tether.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
+    <script src="js/jquery.slim.min.js"></script>
+    <script src="js/tether.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
