--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class = "row">
                     <div class = "col-4">
                         <br></br><br></br>
-                            <img src="images/profile.jpg" class = "rounded-circle float-left" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
+                            <img src="images/profile.JPG" class = "rounded-circle float-left" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
                             <div id = "info" style="font-size:30px">
                                 <center><bold>Anuraag Motiwale</bold>
                             </div>
@@ -62,7 +62,6 @@
                                 <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "20" vspace = "10" style="height:36px;width:36px"></a>
                               </center>
                             </div>
-
                     </div>
                     <div class = "col-8">
                       <br></br>
