Made changes to profile pic

--- a/index.html
+++ b/index.html
@@ -51,20 +51,21 @@
                 <div class = "row">
                     <div class = "col-4">
                         <br></br><br></br>
-                            <img src="images/profile.JPG" class = "rounded-circle float-left" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
+                            <img src="images/profile.JPG" class="img-fluid" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
                             <div id = "info" style="font-size:30px">
                                 <center><bold>Anuraag Motiwale</bold>
                             </div>
                             <div id = "social">
-                              <center>
-                                <a target="_blank" title="Follow me on Google+" href="https://plus.google.com/112507411061159008531"><img alt="Follow me on Google+" src="images/gplus_icon.png" border=0 hspace = "20" vspace = "10" style="height:40px;width:40px"></a>
-                                <a target="_blank" title="Follow me on Facebook" href="https://www.facebook.com/asmotiwale"><img alt="Follow me on Facebook" src="images/fb_icon.png" border=0 hspace = "20" vspace = "10"></a>
-                                <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "20" vspace = "10" style="height:36px;width:36px"></a>
-                              </center>
+                                <center>
+                                    <a target="_blank" title="Follow me on Google+" href="https://plus.google.com/112507411061159008531"><img alt="Follow me on Google+" src="images/gplus_icon.png" border=0 hspace = "20" vspace = "10" style="height:40px;width:40px"></a>
+                                    <a target="_blank" title="Follow me on Facebook" href="https://www.facebook.com/asmotiwale"><img alt="Follow me on Facebook" src="images/fb_icon.png" border=0 hspace = "20" vspace = "10"></a>
+                                    <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "20" vspace = "10" style="height:36px;width:36px"></a>
+                                </center>
                             </div>
                     </div>
-                    <div class = "col-8">
+                    <div class = "col-8" style="background-color:rgba(0, 0, 0, 0.3)">
                       <br></br>
+                      <center>About me</center>
                       <center>Education</center>
                     </div>
                 </div>
