--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class = "row">
                     <div class = "col-4">
                         <br></br><br></br>
-                            <img src="images/profile.JPG" class="img-fluid" alt="Profile Picture" style="height:75%;width:100%;margin: auto;">
+                            <img src="images/profile.JPG" class="img-fluid" alt="Profile Picture" style="margin: auto;max-width: 100%;height: auto;">
                             <div id = "info" style="font-size:30px">
                                 <center><bold>Anuraag Motiwale</bold>
                             </div>
