Made minor changes

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 <div class = "row">
                     <div class = "col-4">
                         <br></br><br></br>
-                            <img src="images/profile.JPG" class="img-fluid" alt="Profile Picture" style="margin: auto;max-width: 100%;height: auto;">
+                            <img src="images/profile.JPG" class="rounded mx-auto d-block" alt="Profile Picture" style="margin: auto;max-width: 100%;height: auto;">
                             <div id = "info" style="font-size:30px">
                                 <center><bold>Anuraag Motiwale</bold>
                             </div>
                             <div id = "social">
                                 <center>
-                                    <a target="_blank" title="Follow me on Google+" href="https://plus.google.com/112507411061159008531"><img alt="Follow me on Google+" src="images/gplus_icon.png" border=0 hspace = "20" vspace = "10" style="height:40px;width:40px"></a>
-                                    <a target="_blank" title="Follow me on Facebook" href="https://www.facebook.com/asmotiwale"><img alt="Follow me on Facebook" src="images/fb_icon.png" border=0 hspace = "20" vspace = "10"></a>
-                                    <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "20" vspace = "10" style="height:36px;width:36px"></a>
+                                    <a target="_blank" title="Follow me on Google+" href="https://plus.google.com/112507411061159008531"><img alt="Follow me on Google+" src="images/gplus_icon.png" class="img-fluid" border=0 hspace = "10" vspace = "10" style="height:40px;width:40px"></a>
+                                    <a target="_blank" title="Follow me on Facebook" href="https://www.facebook.com/asmotiwale"><img alt="Follow me on Facebook" src="images/fb_icon.png" border=0 hspace = "10" vspace = "10"></a>
+                                    <a target="_blank" title="Follow me on Instagram" href="https://www.instagram.com/anuraag2194"><img alt="Follow me on Instagram" src="images/ig_icon.png" border=0 hspace = "10" vspace = "10" style="height:36px;width:36px"></a>
                                 </center>
                             </div>
                     </div>
