--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <!-- div for snackbar -->
+    <div id="snackbar">Welcome. Hope you are having a great day!</div>
+
     <section class = "content" id = "name">
         <div style="color:white;background-color:black">
             <h1><center>ANURAAG MOTIWALE</center></h1>
@@ -43,16 +46,14 @@
             </div>
         </div></center>
     </div>
-
     <div class="tab-content">
-
         <div role="tabpanel" class="tab-pane active" id="about_me">
-            <div class="container">
+            <div class="container" style="background-color:rgba(0, 0, 0, 0.2)">
                 <div class = "row">
                     <div class = "col-4">
                         <br></br><br></br>
                             <img src="images/profile.JPG" class="rounded mx-auto d-block" alt="Profile Picture" style="margin: auto;max-width: 100%;height: auto;">
-                            <div id = "info" style="font-size:30px">
+                            <div id = "info" style="font-size:2.5vw">
                                 <center><bold>Anuraag Motiwale</bold>
                             </div>
                             <div id = "social">
@@ -63,10 +64,9 @@
                                 </center>
                             </div>
                     </div>
-                    <div class = "col-8" style="background-color:rgba(0, 0, 0, 0.3)">
-                      <br></br>
-                      <center>About me</center>
-                      <center>Education</center>
+                    <div class = "col-8" style="background-color:rgba(0, 0, 0, 0.2);font-size:2.5vw">
+                      <center style="text-decoration: underline">About me</center>
+                      <center style="text-decoration: underline">Education</center>
                     </div>
                 </div>
             </div>
@@ -81,6 +81,7 @@
     <script src="js/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/sbar.js"></script>
 </body>
 
 </html>
